objects/Outbound_Enquiry__c.object
<CustomObject>
    <fields>
        <fullName>Alias_Product_Name__c</fullName>
        <label>Alias Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Landed Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Others__c</fullName>
        <label>Describe Others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enquiry</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Outbound Enquirys</relationshipLabel>
        <relationshipName>Outbound_Enquirys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fright_Chages__c</fullName>
        <label>Fright Chages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>To Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Days_for_Credit__c</fullName>
        <label>No of Days for Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advance</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Items__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Items</label>
        <referenceTo>Product_Items__c</referenceTo>
        <relationshipLabel>Outbound Enquirys</relationshipLabel>
        <relationshipName>Outbound_Enquirys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation_Received_Per_Unit__c</fullName>
        <label>Quotation Received Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Price_to_Customer__c</fullName>
        <label>Quoted Price to Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Location__c</fullName>
        <label>Shipping Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enquiry sent</fullName>
                </value>
                <value>
                    <fullName>Quote received</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Unable to contact</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enquired Product</label>
        <referenceTo>Supplier_Product__c</referenceTo>
        <relationshipLabel>Outbound Enquirys</relationshipLabel>
        <relationshipName>Outbound_Enquirys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outbound Enquirys</relationshipLabel>
        <relationshipName>Outbound_Enquirys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Outbound Enquiry</label>
    <nameField>
        <label>Outbound Enquiry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outbound Enquirys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Already_One_Supplier_Approved</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Status__c  ) &amp;&amp;  ISPICKVAL(Status__c  , &apos;Approved&apos;) &amp;&amp;  Product_Items__r.Is_Approved__c =&apos;Approved&apos;</errorConditionFormula>
        <errorMessage>Already this Product Item approved for another Supplier Quote.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quote_receieved_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status__c  , &apos;Quote received&apos;) &amp;&amp; ISChanged(Status__c  ) &amp;&amp;  ( ISNULL( Quotation_Received_Per_Unit__c ) ||  ISNULL( Shipping_Location__c ) ||  (  ISPICKVAL(Payment_Terms__c, &apos;&apos;)  ) ||  ISNULL( Amount__c )    )</errorConditionFormula>
        <errorMessage>Please update below fields before change the status to Quote Received.
1.Quotation Received Per Unit
2.Payment Terms
3.Landed Cost
4.Shipping Location</errorMessage>
    </validationRules>
</CustomObject>